--- a/Acessibilidade/completo.index.html
+++ b/Acessibilidade/completo.index.html
@@ -60,8 +60,8 @@
     <footer id="portal-footer-wrapper">
         <a aria-hidden=true id="accesskey-document" href="#main-container" accesskey="1"></a> 
         <a aria-hidden=true id="accesskey-above-content" href="#above-content" accesskey="1"></a> 
-        <a aria-hidden=true href="#mainnavigation" accesskey="2"></a>
-        <a aria-hidden=true href="#portal-footer-wrapper" accesskey="4"></a>
+        <a aria-hidden=true  id="accesskey-mainnavigation" href="#mainnavigation" accesskey="2"></a>
+        <a aria-hidden=true  id="accesskey-portal-footer-wrapper" href="#portal-footer-wrapper" accesskey="4"></a>
         <div class="container" id="portal-footer"></div>
     </footer>
     <div vw class="enabled">
