--- a/Acessibilidade/modelo.index.html
+++ b/Acessibilidade/modelo.index.html
@@ -58,9 +58,9 @@
       </div><!--/container-->
     </div> <!--/outer-wrapper -->
     <footer id="portal-footer-wrapper">
-        <a aria-hidden=true href="#main-container" accesskey="1"></a>
-        <a aria-hidden=true href="#mainnavigation" accesskey="2"></a>
-        <a aria-hidden=true href="#portal-footer-wrapper" accesskey="4"></a>
+        <a aria-hidden=true id="accesskey-document" href="#main-container" accesskey="1"></a>
+        <a aria-hidden=true  id="accesskey-mainnavigation" href="#mainnavigation" accesskey="2"></a>
+        <a aria-hidden=true  id="accesskey-portal-footer-wrapper" href="#portal-footer-wrapper" accesskey="4"></a>
         <div class="container" id="portal-footer"></div>
     </footer>
     <div vw class="enabled">
