- coments e new social media icon

--- a/FooterSocialMedia/footerSocialMedia.html
+++ b/FooterSocialMedia/footerSocialMedia.html
@@ -1,11 +1,13 @@
 <div class="address col-sm-9 col-xs-12">
-    <p>Universidade Federal de São Carlos<br />Rodovia Washington Luis, km 235 - São Carlos - SP - BR<br />CEP:
-        13565-905<br />Telefone: 16 XXXX-XXXX<br />E-mail: email@ufscar.br</p>
+    <p>Universidade Federal de São Carlos - DEFMH - ProFut<br />Rodovia Washington Luis, km 235 - São Carlos - SP - BR<br />CEP:
+        13565-905<br />Telefone: 16 3306-6759<br />E-mail: profut@ufscar.br</p>
 </div>
 <div class="ms-icons col-sm-3 col-xs-12">
     <p>Nos acompanhe nas redes sociais</p>
     <p>
-        <span><a href="http://www.facebook.com.br" class="facebook"></a></span> 
-        <span><a href="http://www.instagram.com.br" class="instagram"></a></span> 
-        <span><a href="http://www.twitter.com.br" class="twitter"></a></span></p>
+        <span><a href="https://www.instagram.com/profut_ufscar/?hl=pt-br" class="instagram"></a></span> 
+        <span><a href="https://twitter.com/ProFut_UFSCar" class="twitter"></a></span> 
+        <span><a href="https://www.facebook.com/profut.ufscar/?fref=tag" class="facebook"></a></span>
+        <span><a href="https://www.youtube.com/channel/UC0pJU98g3jCJiAnazW1IEdQ" class="youtube"></a></span>
+        <span><a href="https://open.spotify.com/show/2kmLSAkjWMuBhlSHwaQGWA?si=HXG-8xPlQTuiiorIB67UDw" class="spotify"></a></span></p>
 </div>
